--- a/homeworks/hw2/package.json
+++ b/homeworks/hw2/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
     "serve": "webpack serve --mode development"
   },
   "keywords": [],
