--- a/homeworks/hw3/package.json
+++ b/homeworks/hw3/package.json
@@ -15,6 +15,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "sass-loader": "^12.3.0",
@@ -24,6 +25,7 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^9.0.1",
     "node-sass": "^6.0.1"
   }
 }
