--- a/homeworks/hw2/package.json
+++ b/homeworks/hw2/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.4.0",
